refactor animal class and add eating to simulation